Fixed "thank you" message
Fixed "thank you" message overflowing at the end of the suppliers page on small screens.

--- a/Restaurant/Styles/suppliers.css
+++ b/Restaurant/Styles/suppliers.css
@@ -45,7 +45,6 @@
   background-color: #eb9f1a;
   border-radius: 10px;
   text-align: center;
-  width: 100%;
 }
 
 .main-suppliers .thanks p {
@@ -73,6 +72,9 @@
   }
   .main-suppliers .supplier {
     width: calc(50% - 3.5em - 8px);
+  }
+  .thanks {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=suppliers.css.map */
